Adicionei exercícios de CSS.

--- a/2-css/21-display/exemplo01.html
+++ b/2-css/21-display/exemplo01.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Display</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     div {
       border: 1px solid powderblue;
@@ -26,7 +26,7 @@
 
   <div id="conteudo2">
     Conteúdo 2
-    <button onclick="displayHidden()">Display Hidden</button>
+    <button onclick="displayHidden()">Visibility Hidden</button>
   </div>
 
   <div id="conteudo3">
