--- a/2-css/23-position/exemplo02.html
+++ b/2-css/23-position/exemplo02.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Position</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     .container {
       position: relative;
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <h1>Position</h1>
+  <h1>CSS Position</h1>
   <div class="container">
     <img src="../../imagens/unnamed1.jpg" atl="Imagem de uma casa">
     <div class="texto">Estou com uma position absolute!</div>
