--- a/2-css/24-z-index/exemplo01.html
+++ b/2-css/24-z-index/exemplo01.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Z-index</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     .container {
       position: relative;
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-  <h1>Z-index</h1>
+  <h1>CSS Z-index</h1>
 
   <div class="container">
     <div class="div1">Div 1</div>
