--- a/2-css/28-align/exemplo01.html
+++ b/2-css/28-align/exemplo01.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Align</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     div {
       border: 2px solid powderblue;
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-  <h1>Align</h1> 
+  <h1>CSS Align</h1> 
   
   <div class="a">Div centralizada no meio da página com margin: auto e texto centralizado com text-align: center</div>
 
