--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
           Lists
           <ul>
             <li><a href="2-css/19-lists/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/19-lists/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
@@ -262,6 +263,7 @@
           Display
           <ul>
             <li><a href="2-css/21-display/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/21-display/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>Max-width</li>
@@ -269,6 +271,7 @@
           Position
           <ul>
             <li><a href="2-css/23-position/exemplo01.html" target="_blank">Exemplo 01</a> | <a href="2-css/23-position/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="2-css/23-position/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
@@ -281,6 +284,7 @@
           Overflow
           <ul>
             <li><a href="2-css/25-overflow/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/25-overflow/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>Float</li>
@@ -300,6 +304,7 @@
           Combinators
           <ul>
             <li><a href="2-css/29-combinators/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="2-css/29-combinators/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>
