--- a/2-css/20-tables/exemplo01.html
+++ b/2-css/20-tables/exemplo01.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Tables</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     table {
       border-collapse: collapse;
-      overflow-x: auto;
       width: 100%;
     }
     
@@ -45,7 +44,7 @@
 </head>
 
 <body>
-  <h1>Tabelas</h1>
+  <h1>CSS Tabelas</h1>
 
   <table>
     <caption>Exemplo de Tabela</caption>
