--- a/2-css/25-overflow/exemplo01.html
+++ b/2-css/25-overflow/exemplo01.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Overflow</title>
-  <link rel="stylesheet" href="../../estilos/2-css.css">
+  <link rel="stylesheet" href="../../estilos/principal.css">
   <style>
     #overflowTest {
       background: #4CAF50;
