Adicionei anotações, exemplos e exercícios de JS.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Sumário</h1>
 
   <div class="principal">
-    <details open>
+    <details>
       <summary>HTML</summary>
       <ol>
         <li>Home</li>
@@ -134,7 +134,7 @@
       </ol>
     </details>
 
-    <details open>
+    <details>
       <summary>CSS</summary>
       <ol>
         <li>Home</li>
@@ -331,26 +331,37 @@
         <li>
           Introduction
           <ul>
-            <li><a href="3-javascript/02-introduction/exemplo01.html" target="_blank">Exemplo 01</a></li>
-            <li><a href="3-javascript/02-introduction/exemplo02.html" target="_blank">Exemplo 02</a></li>
-            <li><a href="3-javascript/02-introduction/exemplo03.html" target="_blank">Exemplo 03</a></li>
-            <li><a href="3-javascript/02-introduction/exemplo04.html" target="_blank">Exemplo 04</a></li>
+            <li><a href="3-javascript/02-introduction/exemplo01.html" target="_blank">Exemplo 01</a> |
+            <a href="3-javascript/02-introduction/exemplo02.html" target="_blank">Exemplo 02</a> |
+            <a href="3-javascript/02-introduction/exemplo03.html" target="_blank">Exemplo 03</a> |
+            <a href="3-javascript/02-introduction/exemplo04.html" target="_blank">Exemplo 04</a></li>
           </ul>
         </li>
         <li>Where To</li>
         <li>Output</li>
-        <li>Statements</li>
-        <li>Syntax</li>
+        <li>
+          Statements
+          <ul>
+            <li><a href="3-javascript/05-statements/anotacoes.html" target="_blank">Anotações</a></li>
+          </ul>
+        </li>
+        <li>
+          Syntax
+          <ul>
+            <li><a href="3-javascript/06-syntax/anotacoes.html" target="_blank">Anotações</a></li>
+          </ul>
+        </li>
         <li>Comments</li>
         <li>
           Variables
           <ul>
             <li><a href="3-javascript/08-variables/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="3-javascript/08-variables/exercicios.html" target="_blank">Exercícios</a></li>
           </ul>
         </li>
         <li>Let</li>
         <li>Const</li>
-        <li>Operators</li>
+        <li><mark>Operators</mark></li>
         <li>Arithmetic</li>
         <li>Assignment</li>
         <li>Data Types</li>
