--- a/3-javascript/20-string-search/exemplo01.html
+++ b/3-javascript/20-string-search/exemplo01.html
@@ -48,6 +48,20 @@
     console.log(texto2.indexOf(' '))
     let texto3 = texto2.slice(texto2.indexOf(' '))
     console.log(texto3.trim())
+
+
+    let txt = "I can eat bananas all day";
+    //console.log(txt.indexOf('bananas'));
+    //const txt2 = txt.slice(10);
+    //console.log(txt2);
+
+    let txt3 = "Please locate where 'locate' occurs!";
+    let txt4 = txt3.indexOf('locate');
+    let txt5 = txt3.indexOf('locate', txt4 + 1);
+    console.log(txt3.lastIndexOf('locate'));
+
+    console.log(txt5);
+
   </script>
 </body>
 
