--- a/3-javascript/29-array-iteration/exemplo01.html
+++ b/3-javascript/29-array-iteration/exemplo01.html
@@ -26,7 +26,6 @@
     }
 
     numbers.forEach(myFunction);
-
     console.log(txt);
 
 
@@ -54,7 +53,7 @@
 
     //5. indexOf
     const fruits = ["Apple", "Orange", "Apple", "Mango"];
-    console.log(fruits)
+    console.log(fruits);
 
     const position = fruits.indexOf('Orange') + 1;
 
