--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Sumário</h1>
 
   <div class="principal">
-    <details>
+    <details open>
       <summary>HTML</summary>
       <ol>
         <li>Home</li>
@@ -131,10 +131,14 @@
           </ul>
         </li>
         <li>Semantics</li>
+        <li>Style Guide</li>
+        <li>Entities</li>
       </ol>
     </details>
 
-    <details>
+
+
+    <details open>
       <summary>CSS</summary>
       <ol>
         <li>Home</li>
@@ -310,8 +314,8 @@
         <li>
           Pseudo-class
           <ul>
-            <li><a href="2-css/30-pseudo-class/exemplo01.html" target="_blank">Exemplo 01</a></li>
-            <li><a href="2-css/30-pseudo-class/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="2-css/30-pseudo-class/exemplo01.html" target="_blank">Exemplo 01</a> |
+            <a href="2-css/30-pseudo-class/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
         </li>
         <li>
@@ -320,8 +324,22 @@
             <li><a href="2-css/31-pseudo-element/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
+        <li>
+          Opacity
+          <ul>
+            <li><a href="2-css/32-opacity/exemplo01.html" target="_blank">Exemplo</a></li>
+          </ul>
+        </li>
+        <li>
+          Navigation Bar
+          <ul>
+            <li><a href="2-css/33-navigation-bar/exemplo01.html" target="_blank">Exemplo 01</a> |
+            <a href="2-css/33-navigation-bar/exemplo02.html" target="_blank">Exemplo 02</a></li>
+          </ul>
+        </li>
       </ol>
     </details>
+
 
 
     <details open>
@@ -361,20 +379,32 @@
         </li>
         <li>Let</li>
         <li>Const</li>
-        <li><mark>Operators</mark></li>
+        <li>
+          Operators
+          <ul>
+            <li><a href="3-javascript/11-operators/anotacoes.html" target="_blank">Anotações</a></li>
+          </ul>
+        </li>
         <li>Arithmetic</li>
         <li>Assignment</li>
-        <li>Data Types</li>
+        <li>
+          Data Types
+          <ul>
+            <li><a href="3-javascript/14-data-types/anotacoes.html" target="_blank">Anotações</a></li>
+          </ul>
+        </li>
         <li>
           Functions
           <ul>
-            <li><a href="3-javascript/15-functions/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="3-javascript/15-functions/exemplo01.html" target="_blank">Exemplo</a></li>
+            <li><a href="3-javascript/15-functions/anotacoes.html" target="_blank">Anotações</a></li>
           </ul>
         </li>
         <li>
           Objects
           <ul>
             <li><a href="3-javascript/16-object/exemplo01.html" target="_blank">Exemplo 01</a></li>
+            <li><a href="3-javascript/16-object/anotacoes.html" target="_blank">Anotações</a></li>
           </ul>
         </li>
         <li>Events</li>
@@ -382,8 +412,8 @@
         <li>
           String Methods
           <ul>
-            <li><a href="3-javascript/19-string-methods/exemplo01.html" target="_blank">Exemplo 01</a></li>
-            <li><a href="3-javascript/19-string-methods/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="3-javascript/19-string-methods/exemplo01.html" target="_blank">Exemplo 01</a> |
+            <a href="3-javascript/19-string-methods/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
         </li>
         <li>
@@ -417,8 +447,8 @@
         <li>
           Array Sort
           <ul>
-            <li><a href="3-javascript/28-array-sort/exemplo01.html" target="_blank">Exemplo 01</a></li>
-            <li><a href="3-javascript/28-array-sort/exemplo02.html" target="_blank">Exemplo 02</a></li>
+            <li><a href="3-javascript/28-array-sort/exemplo01.html" target="_blank">Exemplo 01</a> |
+            <a href="3-javascript/28-array-sort/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
         </li>
         <li>
@@ -428,6 +458,8 @@
           </ul>
         </li>
         <li>Array Const</li>
+        <li>Dates</li>
+        <li>Date Formats</li>
       </ol>
     </details>
   </div>
