--- a/3-javascript/26-arrays/exemplo01.html
+++ b/3-javascript/26-arrays/exemplo01.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Arrays</h1>
+  <h1>JavaScript Arrays</h1>
 
   <p>Alguns exemplos e exercícios foram feitos usando <code>console.log()</code></p>
 
@@ -21,14 +21,20 @@
 
   <h2>Looping an array - Outra Forma</h2>
   <div id="b"></div>
+  
+  <hr>
+
+  <input type="text">
+  <button>Salvar Dado</button>
+  <p></p>
 
   <script>
     const bicicletas = ["Trek", "Cannondale", "Specialized"];
     const cars = [];
     const frutas = ["Banana", "Laranja", "Uva", "Pêra"];
 
-    console.log(bicicletas);
-    console.log(bicicletas[1]);
+    console.log(bicicletas); // mostra todos os itens
+    console.log(bicicletas[1]); // mostra o "segundo" item
     
     console.log(cars);
     cars[0] = "Saab";
@@ -38,37 +44,45 @@
 
     console.log(frutas);
     console.log(frutas.length);
-    console.log(frutas[0]);
-    console.log(frutas[frutas.length - 1]);
+    console.log(frutas[0]); // acessa o primeiro
+    console.log(frutas[frutas.length - 1]); // acessa o último
 
-    console.log(frutas.push('Limão'));
+    console.log(frutas.push('Limão')); // inclui no fim
     console.log(frutas);
 
     console.log(typeof frutas)
 
+
     // Looping an array
     let frutasTamanho = frutas.length;
-
     let text = "<ul>";
     for (let i = 0; i < frutasTamanho; i++) {
       text += "<li>" + frutas[i] + "</li>";
     }
     text += "</ul>";
-
     document.getElementById('a').innerHTML = text;
 
 
     // Looping an array - outra forma
     let text2 = '<ul>';
-
     function myFunction(value) {
       text2 += '<li>' + value + '</li>';
     }
-
     frutas.forEach(myFunction);
     text2 += '</ul>';
-
     document.getElementById('b').innerHTML = text2;
+
+
+    // incluindo um item na array através de um button
+    const btn = document.querySelector('button');
+    btn.addEventListener('click', teste);
+
+    function teste () {
+      const carros = [];
+      //carros[0] = document.querySelector('input').value;
+      carros.push(document.querySelector('input').value)
+      console.log(carros);
+    }
   </script>
 </body>
 
