--- a/3-javascript/27-arrays-methods/exemplo01.html
+++ b/3-javascript/27-arrays-methods/exemplo01.html
@@ -16,64 +16,69 @@
   <p>Tecle <kbd>F12</kbd> para abrir o <strong>devtools</strong> e visualizar todas as atividades desta página.</p>
 
   <script>
+    // PARTE 1
     const frutas = ['Banana', 'Laranja', 'Uva', 'Pêra'];
+    
+    // retornar o primeiro e o último item da array
+    console.log(frutas[0]);
+    console.log(frutas[frutas.length - 1]);
+
+
+    // converte de array para string
+    console.log(frutas.toString()); // sem nada, inclui vírgula automaticamente
+    console.log(frutas.join(' * '));
+
+
+    // POP & PUSH (adiciona ou retira no fim)
+    const adicionar = frutas.push('Limão');
+    console.log(frutas.push('Limão')); // mostra número de itens
+    console.log(frutas);
+
+    const retirar = frutas.pop();
+    console.log(frutas);
+
+
+    // PARTE 2
+    const bikes = ['Cannondale', 'Trek', 'Specialized'];
+
+    // shift & unshift (início):
+    const retirar2 = bikes.shift();
+    console.log(retirar2); // mostra qual saiu
+    console.log(bikes);
+
+    const adicionar2 = bikes.unshift('Oggi');
+    console.log(adicionar2); // mostra número de itens
+    console.log(bikes);
+
+
+    // PARTE 3
     const myGirls = ["Cecilie", "Lone"];
     const myBoys = ["Emil", "Tobias", "Linus"];
+
     const myChildren = myGirls.concat(myBoys);
     const arr3 = ["Robin", "Morgan"];
     const novaArray = myGirls.concat(myBoys, arr3);
-    const bikes = ['Cannondale', 'Trek', 'Specialized']
-
-    console.log(frutas.toString());
-    console.log(frutas.join(' * '));
-
-    // pop = the last element
-    console.log(frutas.pop());
-    console.log(frutas);
-
-    // push = at the end
-    frutas.push('Kiwi');
-    console.log(frutas);
-
-    // shift = removes the first
-    frutas.shift();
-    console.log(frutas.shift());
-    console.log(frutas);
-
-    // unshift = adds new element at the beginning
-    frutas.unshift('Melão');
-    console.log(frutas.unshift('Manga'));
-    console.log(frutas);
 
     console.log(myChildren);
     console.log(novaArray);
 
-    // splice = emendar
-    console.log(bikes);
-    bikes.splice(2, 0, 'Caloi');
-    console.log(bikes);
-    bikes.splice(1, 1); // tirei um na posição 1
-    console.log(bikes);
 
-    const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
-    console.log(fruits);
-    const fruits2 = fruits.slice(2);
+    // Splicing and Slicing Arrays
+    // The splice() method adds new items to an array.
+    // The slice() method slices out a piece of an array.
+    // Resumindo: retiro ou insiro em qualquer posição dentro da array!
+    const fruits2 = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
+    // splice = emendar
+    fruits2.splice(2, 0, 'Uvinha'); // incluí na pos 2 e não tirei nenhum
+    console.log(fruits2);
+    fruits2.splice(2, 1); // fui na pos 2 e retirei a uvinha
+    console.log(fruits2);
+    fruits2.splice(3,1); // fui na pos 3 e retirei a "Apple"
     console.log(fruits2);
 
-    const teste = ["a", "b", "c"];
-    console.log(teste.shift());
-    console.log(teste);
-    teste.unshift('z');
-    console.log(teste);
-
-    let teste2 = teste.toString();
-    console.log(teste2)
-    let teste3 = teste2.replace('b', ':');
-    console.log(teste3);
-    teste3 = teste3.split(',');
-    console.log(typeof teste3)
-    console.log(teste3);
-
+    const abc = ["A", "B", "C", "D", "E"];
+    console.log(abc);
+    console.log(abc.slice(1, 3)); // aqui mostra a parte que saiu
   </script>
 </body>
 
