--- a/3-javascript/28-array-sort/exemplo02.html
+++ b/3-javascript/28-array-sort/exemplo02.html
@@ -14,15 +14,15 @@
   <div>
     <h2>Sorting Object Arrays</h2>
     
-    <p>Lista de carros:</p>
+    <p>Lista de carros, conforme foram digitadas na array:</p>
     <ul>
       <li>type: 'Volvo', year: 2016</li>
       <li>type: 'Saab', year: 2001</li>
       <li>type: 'BMW', year: 2010</li>
     </ul>
 
-    <button onclick="ordemA()">Ordem Cronológica</button>
-    <button onclick="ordemC()">Ordem Alfabética</button>
+    <button onclick="ordemCronologica()">Ordem Cronológica</button>
+    <button onclick="ordemAlfabetica()">Ordem Alfabética</button>
 
     <section id="listarCarros"></section>
   </div>
@@ -34,26 +34,6 @@
       {type: 'BMW', year:2010}
     ];
 
-    displayCars(); 
-    /* esse display faz com que os itens da array apareçam na ordem em que foram digitados.
-    */
-
-    function ordemA() {
-      cars.sort(function(a, b) {return a.year - b.year});
-      displayCars();
-    }
-
-    function ordemC() {
-      cars.sort(function(a, b){
-      let x = a.type.toLowerCase();
-      let y = b.type.toLowerCase();
-      if (x < y) {return -1;}
-      if (x > y) {return 1;}
-      return 0;
-        });
-      displayCars();
-    }
-    
     function displayCars() {
       let texto = '';
       for (let i = 0; i < cars.length; i++) {
@@ -61,6 +41,30 @@
       }
       document.getElementById('listarCarros').innerHTML = texto;
     }
+
+
+    displayCars(); 
+    /* esse display faz com que os itens da array apareçam na ordem em que foram digitados.
+    */
+
+
+    function ordemCronologica() {
+      cars.sort(function(a, b) {return a.year - b.year});
+      displayCars();
+    }
+
+
+    function ordemAlfabetica() {
+      cars.sort(function(a, b) {
+        let x = a.type.toLowerCase();
+        let y = b.type.toLowerCase();
+        if (x < y) {return -1;}
+        if (x > y) {return 1;}
+        return 0;
+      });
+      displayCars();
+    }
+
 
     /*
     Outra forma de fazer o display é essa aqui:
