Adicionei anotações e exemplos de formulários

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="principal">
     <div class="materia">
       <h2>Tutorial de HTML</h2>
-      <details open>
+      <details>
         <summary>HTML</summary>
         <ol>
           <li>Home</li>
@@ -155,6 +155,17 @@
             </ul>
           </li>
           <li>Form Attributes</li>
+          <li>
+            Form Elements
+            <ul>
+              <li><a href="1-html/2-Formulários/03-form-elements/anotacoes.html">Anotações</a></li>
+              <li><a href="1-html/2-Formulários/03-form-elements/exemplo01.html">Exemplo</a></li>
+            </ul>
+          </li>
+          <li>Input Types</li>
+          <ul>
+            <li><a href="1-html/2-Formulários/04-input-types/exemplo01.html">Exemplo</a></li>
+          </ul>
         </ol>
       </details>
     </div>
@@ -163,7 +174,7 @@
 
     <div class="materia">
       <h2>Tutorial de CSS</h2>
-      <details open>
+      <details>
         <summary>CSS</summary>
         <ol>
           <li>Home</li>
@@ -376,7 +387,7 @@
 
     <div class="materia">
       <h2>Tutorial de JavaScript</h2>
-      <details open>
+      <details>
         <summary>JavaScript</summary>
         <ol>
           <li>Home</li>
