--- a/tutorial/06-attributes/exemplo.html
+++ b/tutorial/06-attributes/exemplo.html
@@ -5,13 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Attributes - Exemplo 01</title>
-  <link rel="stylesheet" href="../../estilos/principal.css">
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
 <body>
+
   <h1>HTML Attributes - Exemplo 01</h1> 
 
   <section class="notas">
@@ -22,11 +20,8 @@
       <li>Attributes provides <strong>additional information</strong> about elements</li>
     </ul>
   </section>
-  
-  
-  <div>
-    
-  </div>
-</body>
 
+  <a href="../../index.html">Voltar</a>
+  
+</body>
 </html>
