--- a/tutorial/07-headings/exemplo.html
+++ b/tutorial/07-headings/exemplo.html
@@ -5,13 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Attributes - Exemplo 01</title>
-  <link rel="stylesheet" href="../../estilos/principal.css">
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
 <body>
+
   <h1>HTML Attributes - Exemplo 01</h1> 
   
   <h1>Heading 1</h1>
@@ -20,10 +18,8 @@
   <h4>Heading 4</h4>
   <h5>Heading 5</h5>
   <h6>Heading 6</h6>
-  
-  <div>
-    
-  </div>
-</body>
 
+  <a href="../../index.html">Voltar</a>
+
+</body>
 </html>
