--- a/tutorial/15-links/exercicios.html
+++ b/tutorial/15-links/exercicios.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Links - Exercícios</title>
-  <link rel="stylesheet" href="../../estilos/principal.css">
+  <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
 <body>
