--- a/tutorial/19-tables/exemplo.html
+++ b/tutorial/19-tables/exemplo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Tables</title>
-  <link rel="stylesheet" href="../../estilos/principal.css">
+  <link rel="stylesheet" href="../../assets/principal.css">
   <style>
     table, th, td {
       border: 1px solid gray;
