--- a/tutorial/19-tables/exercicios.html
+++ b/tutorial/19-tables/exercicios.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Tables - Exercícios</title>
-  <link rel="stylesheet" href="../../estilos/principal.css">
+  <link rel="stylesheet" href="../../assets/principal.css">
   <style>
     .atividade {
       background-color: lightgray;
