Criei um link em cada exemplo e exercício para voltar pra página principal

--- a/tutorial/07-headings/exercicios.html
+++ b/tutorial/07-headings/exercicios.html
@@ -39,6 +39,7 @@
     <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
   </section>
 
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
