--- a/tutorial/08-paragraphs/exemplo.html
+++ b/tutorial/08-paragraphs/exemplo.html
@@ -12,11 +12,9 @@
   <h1>HTML Paragraphs - Exemplo 01</h1> 
   
   <p>Primeiro parágrafo com lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem impedit dignissimos, natus fuga commodi in veniam nihil aspernatur quia est.</p>
-
   <hr>
 
   <p>Segundo parágrafo com lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam doloremque, facilis officia iusto eaque repudiandae odio cumque et similique illo!</p>
-
   <hr>
 
   <p>
@@ -25,7 +23,6 @@
     e mais...<br>
     lorem ipsum dolor sit amet consectetur adipisicing elit.
   </p>
-
   <hr>
 
   <pre>
@@ -33,6 +30,8 @@
     
     Outro parágrafo dentro de uma tag &lt;pre&gt;.
   </pre>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
