--- a/tutorial/10-formatting/exemplo.html
+++ b/tutorial/10-formatting/exemplo.html
@@ -20,6 +20,8 @@
     <p><del>deleted</del> text</p>
     <p><mark>marked/highlighted</mark> text</p>
   </section>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
