--- a/tutorial/11-quotations/exemplo.html
+++ b/tutorial/11-quotations/exemplo.html
@@ -25,6 +25,8 @@
     <h2>bdo</h2>
     <p>Defines the text direction</p>
   </section>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
