--- a/tutorial/11-quotations/exercicios.html
+++ b/tutorial/11-quotations/exercicios.html
@@ -28,7 +28,6 @@
 
   <h2>Exercício 3</h2>
   <p>Change text direction.</p>
-
   <p>Make the text below go right-to-left.</p>
 
   <section class="atividade">
@@ -37,7 +36,6 @@
 
   <h2>Exercício 4</h2>
   <p>The letters "WHO" in the text below is an abbreviation of "World Health Organization".</p>
-
   <p>Use an HTML element to provide the specified abbreviation of "WHO".</p>
 
   <section class="atividade">
@@ -45,6 +43,7 @@
       The <abbr title="World Health Organization"> WHO</abbr> was founded in 1948.</p>
   </section>
 
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
