--- a/tutorial/15-links/exercicios.html
+++ b/tutorial/15-links/exercicios.html
@@ -19,14 +19,13 @@
   </section>
 
   <h2>Exercício 2</h2>
-
   <p>Make the element below into a link that goes to "https://www.w3schools.com".</p>
 
   <section class="atividade">
     <a href="https://www.w3schools.com" target="_blank">This is a link</a>
   </section>
 
-
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
