--- a/tutorial/16-images/exemplo01.html
+++ b/tutorial/16-images/exemplo01.html
@@ -10,11 +10,14 @@
 
 <body>
   <h1>Image Map</h1>
+  
   <picture>
     <source media="(min-width: 800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
     <source media="(min-width: 600px)" srcset="../../imagens/img_girl.jpg">
     <img src="../../imagens/img_tree.png" alt="Imagem de uma árvore com uma coruja num galho">
   </picture>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
