--- a/tutorial/16-images/exercicios.html
+++ b/tutorial/16-images/exercicios.html
@@ -12,7 +12,6 @@
   <h1>CSS Images - Exercícios</h1>
 
   <h2>Exercício 1</h2>
-
   <p>Set the size of the image to 250 pixels wide and 400 pixels tall.</p>
 
   <section class="atividade">
@@ -20,12 +19,13 @@
   </section>
 
   <h2>Exercício 2</h2>
-  
   <p>Add the correct HTML attribute to display the "smiley.gif" image.</p>
 
   <section class="atividade">
     <img src="../../imagens/smiley.gif" alt="Smiley">
   </section>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
