--- a/tutorial/20-lists/exercicios.html
+++ b/tutorial/20-lists/exercicios.html
@@ -12,7 +12,6 @@
   <h1>CSS Lists - Exercícios</h1>
 
   <h2>Exercício 1</h2>
-
   <p>Make an ordered list.</p>
 
   <section class="atividade">
@@ -24,7 +23,6 @@
   </section>
 
   <h2>Exercício 2</h2>
-
   <p>Use CSS to display squares instead of bullets.</p>
 
   <section class="atividade">
@@ -36,7 +34,6 @@
   </section>
 
   <h2>Exercício 3</h2>
-
   <p>Use the correct HTML attribute to display letters (uppercase ABC) instead of numbers.</p>
 
   <section class="atividade">
@@ -48,7 +45,6 @@
   </section>
 
   <h2>Exercício 4</h2>
-
   <p>Use the correct HTML attribute to display uppercase roman numbers.</p>
 
   <section class="atividade">
@@ -60,7 +56,6 @@
   </section>
 
   <h2>Exercício 5</h2>
-
   <p>Use the correct HTML elements to make a description of each term in the description list.</p>
 
   <section class="atividade">
@@ -72,6 +67,7 @@
     </dl>
   </section>
   
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
