--- a/tutorial/24-iframes/exercicios.html
+++ b/tutorial/24-iframes/exercicios.html
@@ -12,7 +12,6 @@
   <h1>CSS Iframes - Exercícios</h1>
 
   <h2>Exercício 1</h2>
-
   <ol>
     <li>Create an iframe with a URL address that goes to https://rafa-san.github.io/curso-em-video-html-css/.</li>
     <li>Use an iframe attribute to make the iframe 400 pixels wide.</li>
@@ -20,10 +19,10 @@
   </ol>
 
   <section class="atividade">
-    <iframe src="https://rafa-san.github.io/curso-em-video-html-css/" style="border:none;width:400px;"></iframe>
+    <iframe src="https://rafa-san.github.io/curso-em-video-html-css/" style="border:none;width:300px;"></iframe>
   </section>
 
-  
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
