--- a/tutorial/30-computercode/exercicios.html
+++ b/tutorial/30-computercode/exercicios.html
@@ -12,7 +12,6 @@
   <h1>CSS Computercode - Exercícios</h1>
 
   <h2>Exercício 1</h2>
-
   <p>Define the text "var person;" as programming code.</p>
 
   <section class="atividade">
@@ -20,7 +19,6 @@
   </section>
 
   <h2>Exercício 2</h2>
-
   <p>Define the text inside the "code" element as preformatted text (to preserve spaces and line breaks).</p>
 
   <section class="atividade">
@@ -36,12 +34,13 @@
   </section>
 
   <h2>Exercício 3</h2>
-
   <p>Define the character "x" in the equation as a variable.</p>
 
   <section class="atividade">
     <p>A simple math equation: <var>x</var> = 3 + 2; </p>
   </section>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
