--- a/tutorial/39-forms/exemplo.html
+++ b/tutorial/39-forms/exemplo.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Formulários - Exemplo</title>
   <link rel="stylesheet" href="../../assets/principal.css">
-  <style>
-
-  </style>
 </head>
 
 <body>
@@ -22,6 +19,7 @@
     <input type="submit">
   </form>
 
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
