--- a/tutorial/09-block-inline/exemplo.html
+++ b/tutorial/09-block-inline/exemplo.html
@@ -20,6 +20,7 @@
 
 <body>
   <h1>Block & Inline</h1>
+
   <div class="div-block-inline">
     Elemento com display block
   </div>
@@ -27,6 +28,8 @@
   <span class="span-block-inline">
     Elemento com display inline
   </span>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
