--- a/tutorial/16-images/exemplo02.html
+++ b/tutorial/16-images/exemplo02.html
@@ -10,11 +10,14 @@
 
 <body>
   <h1>Image Map</h1>
+  
   <picture>
   <source media="(max-width:600px)" srcset="https://www.w3schools.com/html/img_girl.jpg">
   <source media="(max-width:800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
   <img src="https://cdn.pixabay.com/photo/2017/08/01/08/29/woman-2563491_1280.jpg" alt="descrição">
   </picture>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
