--- a/tutorial/19-tables/exercicios.html
+++ b/tutorial/19-tables/exercicios.html
@@ -33,9 +33,7 @@
   <h1>CSS Tables - Exercícios</h1>
 
   <h2>Exercício 1</h2>
-
   <p>Add a table row with two table headers.</p>
-
   <p>The two table headers should have the value "Name" and "Age".</p>
 
   <section class="atividade">
@@ -52,9 +50,7 @@
   </section>
 
   <h2>Exercício 2</h2>
-
   <p>Add a table caption that says "Names".</p>
-
   <section class="atividade">
     <table>
     <caption>Names</caption>
@@ -72,7 +68,6 @@
   </section>
 
   <h2>Exercício 3</h2>
-
   <p>Use CSS styles to make the table 300 pixels wide.</p>
 
   <section class="atividade">
@@ -91,7 +86,6 @@
   </section>
 
   <h2>Exercício 4</h2>
-
   <p>Use the correct HTML attribute to make the first TH element span two columns.</p>
 
   <section class="atividade">
@@ -114,7 +108,6 @@
   </section>
 
   <h2>Exercício 5</h2>
-
   <p>Use the correct HTML attribute to make the second TH element span two rows.</p>
 
   <section class="atividade">
@@ -132,6 +125,8 @@
       </tr>
     </table>
   </section>
+
+  <a href="../../index.html">Voltar</a>
 </body>
 
 </html>
