Reorganizei mais três pastas e atualizei o index

--- a/index.html
+++ b/index.html
@@ -145,22 +145,27 @@
           <li>HTML vs. XHTML</li>
           <li>
             Forms
-            <ul>
-              <li><a href="tutorial/39-forms/exemplo.html">Exemplo</a></li>
-            </ul>
-          </li>
-          <li>Form Attributes</li>
-          <li>
-            Form Elements
-            <ul>
-              <li><a href="1-html/2-Formulários/03-form-elements/anotacoes.html">Anotações</a></li>
-              <li><a href="1-html/2-Formulários/03-form-elements/exemplo01.html">Exemplo</a></li>
-            </ul>
-          </li>
-          <li>Input Types</li>
-          <ul>
-            <li><a href="1-html/2-Formulários/04-input-types/exemplo01.html">Exemplo</a></li>
-          </ul>
+            <ol type="i">
+              <li>
+                Forms
+                <ul>
+                  <li><a href="tutorial/39-forms/exemplo.html">Exemplo</a></li>
+                </ul>
+              </li>
+              <li>Form Attributes</li>
+              <li>
+                Form Elements
+                <ul>
+                  <li><a href="tutorial/41-form-elements/anotacoes.html">Anotações</a></li>
+                  <li><a href="tutorial/41-form-elements/exemplo01.html">Exemplo</a></li>
+                </ul>
+              </li>
+              <li>Input Types</li>
+                <ul>
+                  <li><a href="tutorial/42-input-types/exemplo01.html">Exemplo</a></li>
+                </ul>
+            </ol>
+          </li> 
         </ol>
       </details>
     </div>
