--- a/tutorial/41-form-elements/exemplo01.html
+++ b/tutorial/41-form-elements/exemplo01.html
@@ -6,16 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Form Elements - Exemplo</title>
   <link rel="stylesheet" href="../../estilos/principal.css">
-  <style>
-
-  </style>
 </head>
 
 <body>
   <h1>HTML Form Elements - Exemplo</h1> 
   
   <h2>Select</h2>
-
   <form>
     <label for="cars">Choose a car:</label>
     <select id="cars" name="cars" size="4" multiple>
@@ -38,7 +34,6 @@
   </form>
 
   <h2>Fieldset</h2>
-
   <form>
     <fieldset>
       <legend>Teste com fieldset</legend>
@@ -67,7 +62,6 @@
 
 
   <h2>Output</h2>
-
   <form oninput="x.value=parseInt(a.value)+parseInt(b.value)">
     0
     <input type="range" id="a" name="a" value="50">
@@ -78,6 +72,8 @@
     <br><br>
     <input type="submit">
   </form>
+
+  <a href="../../index.html">Voltar</a>
 
   <script>
     const botao = document.querySelector('button');
