--- a/tutorial/42-input-types/exemplo01.html
+++ b/tutorial/42-input-types/exemplo01.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Input Types - Exemplo</title>
   <link rel="stylesheet" href="../../estilos/principal.css">
-  <style>
-
-  </style>
 </head>
 
 <body>
@@ -31,21 +28,19 @@
     <input type="submit" value="Submit">
     <input type="reset">
   </form>
-
   <hr>
 
   <h2>radio</h2>
   <p>Choose your favorite Web language:</p>
-    <form action="#">
-      <input type="radio" id="html" name="fav_language" value="HTML">
-      <label for="html">HTML</label><br>
-      <input type="radio" id="css" name="fav_language" value="CSS">
-      <label for="css">CSS</label><br>
-      <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-      <label for="javascript">JavaScript</label><br><br>
-      <input type="submit">
-    </form> 
-
+  <form action="#">
+    <input type="radio" id="html" name="fav_language" value="HTML">
+    <label for="html">HTML</label><br>
+    <input type="radio" id="css" name="fav_language" value="CSS">
+    <label for="css">CSS</label><br>
+    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+    <label for="javascript">JavaScript</label><br><br>
+    <input type="submit">
+  </form> 
   <hr>
 
   <h2>checkbox</h2>
@@ -56,7 +51,6 @@
     <label for="vehical2">I have a car</label><br><br>
     <input type="button" value="Botão">
   </form>
-
   <hr>
 
   <h2>button</h2>
@@ -77,6 +71,8 @@
     <input type="date" id="niver" name="niver">
   </form>
 
+  <a href="../../index.html">Voltar</a>
+
   <!-- JavaScript -->
   <script>
     const botao = document.querySelector('.btn');
@@ -85,8 +81,6 @@
       alert('Viu como eu funciono?!');
     }
   </script>
-  
-
-  
 </body>
+
 </html>
