Renomeei pastas e atualizei o index

--- a/index.html
+++ b/index.html
@@ -13,162 +13,163 @@
   <h1>Tutorial de HTML</h1>
 
   <div class="principal">
-    <div class="materia">
-      <h2>Sumário</h2>
-      <details open>
-        <summary>HTML</summary>
-        <ol>
-          <li>Home</li>
-          <li>Introduction</li>
-          <li>Editors</li>
-          <li>Basic</li>
-          <li>Elements</li>
-          <li>
-            Attributes
-            <ul>
-              <li><a href="tutorial/06-attributes/exemplo.html">Exemplo</a></li>
-            </ul>
-          </li>
-          <li>
-            Headings
-            <ul>
-              <li><a href="tutorial/07-headings/exemplo.html">Exemplo</a></li>
-              <li><a href="tutorial/07-headings/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>
-            Paragraphs
-            <ul>
-              <li><a href="tutorial/08-paragraphs/exemplo.html">Exemplo</a></li>
-            </ul>
-          </li>
-          <li>Styles</li>
-          <li>
-            Formatting
-            <ul>
-              <li><a href="tutorial/10-formatting/exemplo.html">Exemplo</a></li>
-              <li><a href="tutorial/10-formatting/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>
-            Quotations
-            <ul>
-              <li><a href="tutorial/11-quotations/exemplo.html">Exemplo</a></li>
-              <li><a href="tutorial/11-quotations/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>Comments</li>
-          <li>
-            Colors
-            <ul>
-              <li>RGB</li>
-              <li>HEX</li>
-              <li>HSL</li>
-            </ul>
-          </li>
-          <li>CSS</li>
-          <li>
-            Links
-            <ul>
-              <li>Colors</li>
-              <li>Bookmarks</li>
-              <li><a href="tutorial/15-links/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>
-            Images
-            <ul>
-              <li>Image Map</li>
-              <li>Background Images</li>
-              <li>The Picture Element</li>
-              <li>
-                <a href="tutorial/16-images/exemplo01.html">Exemplo 01</a> | 
-                <a href="tutorial/16-images/exemplo02.html">Exemplo 02</a>
-              </li>
-              <li><a href="tutorial/16-images/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>Favicon</li>
-          <li>Page Title</li>
-          <li>
-            Tables
-            <ul>
-              <li>Borders</li>
-              <li>Sizes</li>
-              <li>Headers</li>
-              <li>Padding & Spacing</li>
-              <li>Colspan & Rowspan</li>
-              <li>Styling</li>
-              <li>Colgroup</li>
-              <li><a href="tutorial/19-tables/exemplo.html">Exemplo</a></li>
-              <li><a href="tutorial/19-tables/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>
-            Lists
-            <ul>
-              <li><a href="tutorial/20-lists/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>
-            Block & Inline
-            <ul>
-              <li><a href="tutorial/21-block-inline/exemplo.html">Exemplo</a></li>
-            </ul>
-          </li>
-          <li>Classes</li>
-          <li>Id</li>
-          <li>
-            Iframes
-            <ul>
-              <li><a href="tutorial/24-iframes/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>JavaScript</li>
-          <li>File Paths</li>
-          <li>Head</li>
-          <li>Layout</li>
-          <li>Responsive</li>
-          <li>
-            Computer Code
-            <ul>
-              <li><a href="tutorial/30-computercode/exercicios.html">Exercícios</a></li>
-            </ul>
-          </li>
-          <li>Semantics</li>
-          <li>Style Guide</li>
-          <li>Entities</li>
-          <li>Symbols</li>
-          <li>Emojis</li>
-          <li>Charset</li>
-          <li>URL Encode</li>
-          <li>HTML vs. XHTML</li>
-          <li>
-            Forms
-            <ol type="i">
-              <li>
-                Forms
-                <ul>
-                  <li><a href="tutorial/39-forms/exemplo.html">Exemplo</a></li>
-                </ul>
-              </li>
-              <li>Form Attributes</li>
-              <li>
-                Form Elements
-                <ul>
-                  <li><a href="tutorial/41-form-elements/anotacoes.html">Anotações</a></li>
-                  <li><a href="tutorial/41-form-elements/exemplo01.html">Exemplo</a></li>
-                </ul>
-              </li>
-              <li>Input Types</li>
-                <ul>
-                  <li><a href="tutorial/42-input-types/exemplo01.html">Exemplo</a></li>
-                </ul>
-            </ol>
-          </li> 
-        </ol>
-      </details>
-    </div>
+    <h2>Sumário</h2>
+    <details>
+      <summary>HTML</summary>
+      <ol>
+        <li>Home</li>
+        <li>Introduction</li>
+        <li>Editors</li>
+        <li>Basic</li>
+        <li>Elements</li>
+        <li>
+          Attributes
+          <ul>
+            <li><a href="tutorial/06-attributes/exemplo.html">Exemplo</a></li>
+          </ul>
+        </li>
+        <li>
+          Headings
+          <ul>
+            <li><a href="tutorial/07-headings/exemplo.html">Exemplo</a></li>
+            <li><a href="tutorial/07-headings/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>
+          Paragraphs
+          <ul>
+            <li><a href="tutorial/08-paragraphs/exemplo.html">Exemplo</a></li>
+          </ul>
+        </li>
+        <li>Styles</li>
+        <li>
+          Formatting
+          <ul>
+            <li><a href="tutorial/10-formatting/exemplo.html">Exemplo</a></li>
+            <li><a href="tutorial/10-formatting/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>
+          Quotations
+          <ul>
+            <li><a href="tutorial/11-quotations/exemplo.html">Exemplo</a></li>
+            <li><a href="tutorial/11-quotations/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>Comments</li>
+        <li>
+          Colors
+          <ul>
+            <li>RGB</li>
+            <li>HEX</li>
+            <li>HSL</li>
+          </ul>
+        </li>
+        <li>CSS</li>
+        <li>
+          Links
+          <ul>
+            <li>Colors</li>
+            <li>Bookmarks</li>
+            <li><a href="tutorial/15-links/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>
+          Images
+          <ul>
+            <li>Image Map</li>
+            <li>Background Images</li>
+            <li>The Picture Element</li>
+            <li>
+              <a href="tutorial/16-images/exemplo01.html">Exemplo 01</a> | 
+              <a href="tutorial/16-images/exemplo02.html">Exemplo 02</a>
+            </li>
+            <li><a href="tutorial/16-images/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>Favicon</li>
+        <li>Page Title</li>
+        <li>
+          Tables
+          <ul>
+            <li>Borders</li>
+            <li>Sizes</li>
+            <li>Headers</li>
+            <li>Padding & Spacing</li>
+            <li>Colspan & Rowspan</li>
+            <li>Styling</li>
+            <li>Colgroup</li>
+            <li><a href="tutorial/19-tables/exemplo.html">Exemplo</a></li>
+            <li><a href="tutorial/19-tables/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>
+          Lists
+          <ul>
+            <li><a href="tutorial/20-lists/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>
+          Block & Inline
+          <ul>
+            <li><a href="tutorial/21-block-inline/exemplo.html">Exemplo</a></li>
+          </ul>
+        </li>
+        <li>Classes</li>
+        <li>Id</li>
+        <li>
+          Iframes
+          <ul>
+            <li><a href="tutorial/24-iframes/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>JavaScript</li>
+        <li>File Paths</li>
+        <li>Head</li>
+        <li>Layout</li>
+        <li>Responsive</li>
+        <li>
+          Computer Code
+          <ul>
+            <li><a href="tutorial/30-computercode/exercicios.html">Exercícios</a></li>
+          </ul>
+        </li>
+        <li>Semantics</li>
+        <li>Style Guide</li>
+        <li>Entities</li>
+        <li>Symbols</li>
+        <li>Emojis</li>
+        <li>Charset</li>
+        <li>URL Encode</li>
+        <li>HTML vs. XHTML</li>
+      </ol>
+    </details>
+
+    <details open>
+      <summary>FORMS</summary>
+      <ol>
+        <li>
+          Forms
+          <ul>
+            <li><a href="tutorial/39-forms/exemplo.html">Exemplo</a></li>
+          </ul>
+        </li>
+        <li>Form Attributes</li>
+        <li>
+          Form Elements
+          <ul>
+            <li><a href="tutorial/41-form-elements/anotacoes.html">Anotações</a></li>
+            <li><a href="tutorial/41-form-elements/exemplo01.html">Exemplo</a></li>
+          </ul>
+        </li>
+        <li>
+          Input Types
+          <ul>
+            <li><a href="tutorial/42-input-types/exemplo01.html">Exemplo</a></li>
+          </ul>
+        </li>
+      </ol>
+    </details>
   </div>
 
 </body>
